# AdventOfCode

./: .gitignore  CMakeLists.txt
Day1/: CMakeLists.txt  day1.cpp  day1a.cpp  day1b.cpp
Day2/: CMakeLists.txt  day2.cpp  day2a.cpp  day2b.cpp
Day3/: CMakeLists.txt  day3.cpp
Day4/: CMakeLists.txt  day4.cpp
Day5/: CMakeLists.txt  day5.cpp
common/: CMakeLists.txt  commonFn.cpp  commonIO.cpp  commonIO.hpp
common/include/: commonFn.hpp  commonIO.hpp
